[package]
name = "ws-demo"
version = "0.1.0"
authors = ["antholeole <antholeinik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
actix-web-actors="4"
actix = "0.13"
uuid = { version = "1.2", features = ["v4", "serde"] }
